kubernetes/rancherdesktop/jade-shooter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jade-shooter-service
  namespace: default
spec:
  selector:
    app: jade-shooter
  ports:
  - port: 80
    targetPort: 80
