kubernetes/rancherdesktop/jade-shooter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jade-shooter
  labels:
    name: jade-shooter
spec:
  rules:
  - host: jade-shooter.rancher.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jade-shooter-service
            port:
              number: 80
  tls:
  - hosts:
    - jade-shooter.rancher.localhost
